# requestr

./: README.md  pyproject.toml
example/: extractsummit.py  hackernews.py
requestr/: __init__.py  defaults.py  downloader.py  exceptions.py  middlewares.py  proxy.py  request.py  request_htpx.py  response.py  session.py  throttler.py  utils.py
requestr/middlewares/: __init__.py  headers.py  proxy.py  retry.py
tests/: test_downloader.py  test_middleware.py  test_proxy.py  test_response.py  test_throttler.py
