[tool.poetry]
name = "requestr"
version = "0.1.0"
description = "request download manager"
authors = ["Bernardas Alisauskas <bernardas.alisauskas@pm.me>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.19.0"
aiohttp = {extras = ["speedup"], version = "^3.7.4"}

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-httpbin = "^1.0.0"
pytest-asyncio = "^0.15.1"
parsel = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
