[tool.poetry]
name = "requestr"
version = "0.1.1"
description = "request download manager"
authors = ["Bernardas Alisauskas <bernardas.alisauskas@pm.me>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = {extras = ["speedup"], version = "^3.7.4"}
parsel = {version = "^1.6.0", optional = true}
loguru = "^0.5.3"
aiolimiter = "^1.0.0-beta.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-httpbin = "^1.0.0"
pytest-asyncio = "^0.15.1"
flake8 = "^3.9.2"
black = "^21.9b0"
pytest-mock = "^3.6.1"
mock = "^4.0.3"
pdoc = "^8.0.1"
pylint = "^2.11.1"
taskipy = "^1.9.0"

[tool.poetry.extras]
parse = ["parsel"]

[tool.black]
line-length = 120
target-version = ['py37', 'py38', 'py39']

[tool.poetry.scripts]
parsel = "parselcli.cli:cli"

[tool.taskipy.settings]
use_vars = true

[tool.taskipy.variables]
pkg = "requestr"

[tool.taskipy.tasks]
test = "pytest tests/"
fmt = "black {pkg}"
check_fmt = "black --check {pkg}"
lint = "pylint {pkg}"
flake = "flake8 {pkg}"
check = "task check_fmt && task flake && task lint"


[tool.pytest.ini_options]
mock_use_standalone_module = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
